--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<title>fitodac</title>
 </head>
 <body>
-	Please visit <a href="https://fitodac.com">fitodac.com</a>
+	Please visit <a href="https://fitodac.uno">fitodac.uno</a>
 </body>
 </html>
